--- a/assets/css/burnthouse-theme.css
+++ b/assets/css/burnthouse-theme.css
@@ -6,6 +6,21 @@
  * Licensed under the GPLv2+ license.
  */
 @import url(https://fonts.googleapis.com/css?family=Cinzel|);
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
 body {
   background-color: #6699cc;
   color: #000;
@@ -34,12 +49,29 @@ a:hover {
   color: #000; }
 
 .content {
+  margin: 0 auto; }
+
+.content .text {
   background-color: #fff;
   padding: 20px 30px;
   box-sizing: border-box;
   width: 100%;
-  margin: 0 auto;
   text-align: left; }
+
+.content.loading {
+  background-color: inherit;
+  text-align: center; }
+
+.content.loading:before {
+  content: '';
+  display: inline-block;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  border: 0.25rem solid rgba(255, 255, 255, 0.2);
+  border-top-color: white;
+  -webkit-animation: spin 1s infinite linear;
+          animation: spin 1s infinite linear; }
 
 @media screen and (min-width: 700px) {
   .content {
@@ -61,9 +93,6 @@ a:hover {
 .main-menu li {
   display: block;
   padding: .5em; }
-
-.main-menu li.current_page_item a {
-  color: #993300; }
 
 @media screen and (min-width: 700px) {
   .main-menu li {
@@ -117,3 +146,11 @@ a:hover {
 @media screen and (min-width: 700px) {
   .tour {
     width: 700px; } }
+
+/**
+ * Audio
+ */
+audio {
+  position: fixed;
+  bottom: 8px;
+  right: 8px; }
