--- a/assets/css/burnthouse-theme.css
+++ b/assets/css/burnthouse-theme.css
@@ -30,6 +30,9 @@ body {
   width: 100%;
   text-align: center; }
 
+.summary .wp-video {
+  margin: 40px auto; }
+
 img {
   width: 100%;
   height: auto; }
